fix(ci): apply JJB 6 deprecation resolution for hafnium jobs
Starting with Jenkins Job Builder 6, jobs are processed using
the same expansion mechanism as job templates.
As a result, braces ({}) are now interpreted as template expressions.

This change updates our jobs to escape braces that are not intended as
template variables by doubling them, ensuring they are treated as
literal characters and preventing unintended expansions.

For reference, see the JJB 6.0.0 release notes:
https://jenkins-job-builder.readthedocs.io/en/latest/changelog.html#release-6-0-0

Change-Id: I8a9a75e89ee9afd2a6a05b1059e2ed67a83ad266
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -3,7 +3,7 @@
     scm:
       - git:
           url: https://review.trustedfirmware.org/TF-A/trusted-firmware-a
-          refspec: ${TFA_REFSPEC}
+          refspec: ${{TFA_REFSPEC}}
           name: origin
           branches:
               - refs/heads/master
@@ -19,7 +19,7 @@
     scm:
       - git:
           url: https://review.trustedfirmware.org/hafnium/hafnium
-          refspec: ${HF_REFSPEC}
+          refspec: ${{HF_REFSPEC}}
           name: origin
           branches:
             - refs/heads/master
@@ -35,7 +35,7 @@
     scm:
       - git:
           url: https://review.trustedfirmware.org/ci/hafnium-ci-scripts
-          refspec: ${HF_CI_SCRIPT_REFSPEC}
+          refspec: ${{HF_CI_SCRIPT_REFSPEC}}
           name: origin
           branches:
               - refs/heads/master
@@ -49,7 +49,7 @@
     scm:
       - git:
           url: https://github.com/ARM-software/ff-a-acs
-          refspec: ${ACS_REFSPEC}
+          refspec: ${{ACS_REFSPEC}}
           name: origin
           branches:
               - refs/heads/main
@@ -112,13 +112,13 @@
           echo $PATH
           aarch64-none-elf-gcc -v
 
-          mkdir ${WORKSPACE}/../fvp
-          pushd ${WORKSPACE}/../fvp
-          wget -q ${FVP_MODEL_URL}/${FVP_MODEL_ARCHIVE_NAME}
-          tar xvfz ${FVP_MODEL_ARCHIVE_NAME}
+          mkdir ${{WORKSPACE}}/../fvp
+          pushd ${{WORKSPACE}}/../fvp
+          wget -q ${{FVP_MODEL_URL}}/${{FVP_MODEL_ARCHIVE_NAME}}
+          tar xvfz ${{FVP_MODEL_ARCHIVE_NAME}}
           popd
-          ${WORKSPACE}/hafnium-ci-scripts/acs/builder.sh
-          ${WORKSPACE}/hafnium-ci-scripts/acs/runner.sh
+          ${{WORKSPACE}}/hafnium-ci-scripts/acs/builder.sh
+          ${{WORKSPACE}}/hafnium-ci-scripts/acs/runner.sh
     publishers:
         - archive:
             artifacts: 'logs/*'
