--- a/hafnium-code-coverage-fvp.yaml
+++ b/hafnium-code-coverage-fvp.yaml
@@ -55,7 +55,7 @@
     scm:
         - git:
             url: https://review.trustedfirmware.org/hafnium/hafnium
-            refspec: ${HF_REFSPEC}
+            refspec: ${{HF_REFSPEC}}
             name: origin
             branches:
                 - refs/heads/master
@@ -71,24 +71,24 @@
             timeout: 120
             fail: true
         - build-name:
-            name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
+            name: '#${{BUILD_NUMBER}}-${{GIT_REVISION,length=8}}'
     builders:
         - shell: |
             #!/bin/bash
 
             set -ex
-            mkdir "${WORKSPACE}"/../fvp
-            pushd "${WORKSPACE}"/../fvp
-            wget -q "${FVP_MODEL_URL}/${FVP_MODEL_ARCHIVE_NAME}"
-            tar xfz "${FVP_MODEL_ARCHIVE_NAME}"
+            mkdir "${{WORKSPACE}}"/../fvp
+            pushd "${{WORKSPACE}}"/../fvp
+            wget -q "${{FVP_MODEL_URL}}/${{FVP_MODEL_ARCHIVE_NAME}}"
+            tar xfz "${{FVP_MODEL_ARCHIVE_NAME}}"
             popd
-            PATH=${WORKSPACE}/prebuilts/linux-x64/dtc:$PATH
+            PATH=${{WORKSPACE}}/prebuilts/linux-x64/dtc:$PATH
             make PROJECT=reference ENABLE_ASSERTIONS=1
-            if [ "${DEPLOY_HAFNIUM_AS_SPMC}" == "true" ]; then
-              kokoro/test_spmc.sh ${ARGS_DEPLOY_SPMC}
+            if [ "${{DEPLOY_HAFNIUM_AS_SPMC}}" == "true" ]; then
+              kokoro/test_spmc.sh ${{ARGS_DEPLOY_SPMC}}
             fi
-            if [ "${DEPLOY_HAFNIUM_AS_HYP}" == "true" ]; then
-              kokoro/test.sh ${ARGS_DEPLOY_HYP}
+            if [ "${{DEPLOY_HAFNIUM_AS_HYP}}" == "true" ]; then
+              kokoro/test.sh ${{ARGS_DEPLOY_HYP}}
             fi
     triggers:
         - timed: '59 23 * * 6'
