--- a/hafnium-commitlint.yaml
+++ b/hafnium-commitlint.yaml
@@ -42,11 +42,11 @@
 
     scm:
         - git:
-            url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
-            refspec: ${GERRIT_REFSPEC}
+            url: https://review.trustedfirmware.org/${{GERRIT_PROJECT}}
+            refspec: ${{GERRIT_REFSPEC}}
             name: origin
             branches:
-                - ${GERRIT_BRANCH}
+                - ${{GERRIT_BRANCH}}
             skip-tag: true
             depth: 100
             shallow-clone: false
@@ -79,7 +79,7 @@
             timeout: 30
             fail: true
         - build-name:
-            name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
+            name: '#${{BUILD_NUMBER}}-${{GIT_REVISION,length=8}}'
 
     builders:
       - shell: |
@@ -88,30 +88,30 @@
           set -x
 
           # Ensure all heads (incl. REFNAME_BASE) exist locally.
-          git fetch --no-tags "https://review.trustedfirmware.org/${GERRIT_PROJECT}" \
+          git fetch --no-tags "https://review.trustedfirmware.org/${{GERRIT_PROJECT}}" \
             '+refs/heads/*:refs/remotes/origin/*'
 
           # Select fetch spec:
           # - CI: use Gerrit-provided GERRIT_REFSPEC
           # - Manual: use the parameter entered in Jenkins UI
-          FETCH_SPEC="${GERRIT_REFSPEC}"
+          FETCH_SPEC="${{GERRIT_REFSPEC}}"
 
           # Fetch the target commit/patchset and check out FETCH_HEAD
-          git fetch --no-tags "https://review.trustedfirmware.org/${GERRIT_PROJECT}" "${FETCH_SPEC}"
+          git fetch --no-tags "https://review.trustedfirmware.org/${{GERRIT_PROJECT}}" "${{FETCH_SPEC}}"
           git checkout -qf FETCH_HEAD
 
           echo "HEAD: $(git rev-parse --short HEAD)"
-          echo "BASE: ${REFNAME_BASE}"
+          echo "BASE: ${{REFNAME_BASE}}"
 
           # Compute merge-base with the base branch
-          merge_base="$(git merge-base "${REFNAME_BASE}" HEAD)"
-          echo "Computed merge-base: ${merge_base}"
+          merge_base="$(git merge-base "${{REFNAME_BASE}}" HEAD)"
+          echo "Computed merge-base: ${{merge_base}}"
 
-          echo "Lint range: ${merge_base}..HEAD"
-          git log --oneline "${merge_base}..HEAD" || true
+          echo "Lint range: ${{merge_base}}..HEAD"
+          git log --oneline "${{merge_base}}..HEAD" || true
 
           # If no commits ahead, exit cleanly.
-          if [[ "$(git rev-list --count "${merge_base}..HEAD")" -eq 0 ]]; then
+          if [[ "$(git rev-list --count "${{merge_base}}..HEAD")" -eq 0 ]]; then
             echo "No new commits to lint (range empty)."
             exit 0
           fi
@@ -119,8 +119,8 @@
           # Perform commitlint for each commit.
           # Lint the computed range (merge_base..HEAD) using Hafnium's make target.
           # For readability, insert a blank line after each commit's result line.
-          make commitlint COMMITLINT_FROM="${merge_base}" COMMITLINT_TO="HEAD" \
-            | awk '{
+          make commitlint COMMITLINT_FROM="${{merge_base}}" COMMITLINT_TO="HEAD" \
+            | awk '{{
                 print;
                 if ($0 ~ /found[[:space:]]+[0-9]+[[:space:]]+problems?/) print "";
-              }'
+              }}'
