--- a/hafnium-lts2.14-check-docs.yaml
+++ b/hafnium-lts2.14-check-docs.yaml
@@ -33,11 +33,11 @@
 
     scm:
       - git:
-          url: ${URL}
-          refspec: ${REFSPEC}
+          url: ${{URL}}
+          refspec: ${{REFSPEC}}
           name: origin
           branches:
-            - ${REFNAME}
+            - ${{REFNAME}}
           skip-tag: true
           shallow-clone: false
           wipe-workspace: true
@@ -69,7 +69,7 @@
           timeout: 30
           fail: true
       - build-name:
-          name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
+          name: '#${{BUILD_NUMBER}}-${{GIT_REVISION,length=8}}'
       - workspace-cleanup
       - inject:
           properties-content: |
@@ -84,27 +84,27 @@
           set -x
 
           # 1) Ensure heads exist (helps fresh/manual runs)
-          git fetch --no-tags "${URL}" '+refs/heads/*:refs/remotes/origin/*'
+          git fetch --no-tags "${{URL}}" '+refs/heads/*:refs/remotes/origin/*'
 
           # 2) Choose what to fetch
           # - Gerrit run => use the change ref (GERRIT_REFSPEC)
           # - Manual run  => use the mapping from REFSPEC (heads)
-          FETCH_SPEC="${REFSPEC}"
-          if [ -n "${GERRIT_REFSPEC:-}" ]; then
-            FETCH_SPEC="${GERRIT_REFSPEC}"
+          FETCH_SPEC="${{REFSPEC}}"
+          if [ -n "${{GERRIT_REFSPEC:-}}" ]; then
+            FETCH_SPEC="${{GERRIT_REFSPEC}}"
           fi
 
           # 3) Fetch and check out the target
-          git fetch --no-tags "${URL}" "${FETCH_SPEC}"
+          git fetch --no-tags "${{URL}}" "${{FETCH_SPEC}}"
           git checkout -qf FETCH_HEAD
 
           echo "HEAD: $(git rev-parse --short HEAD)"
-          echo "BASE: ${REFNAME_BASE}"
+          echo "BASE: ${{REFNAME_BASE}}"
 
           # 4) Only build if something under docs/ changed
-          merge_base="$(git merge-base "${REFNAME_BASE}" HEAD)"
-          echo "merge-base: ${merge_base}"
-          if ! git diff --name-only "${merge_base}..HEAD" -- docs/ | grep -q .; then
+          merge_base="$(git merge-base "${{REFNAME_BASE}}" HEAD)"
+          echo "merge-base: ${{merge_base}}"
+          if ! git diff --name-only "${{merge_base}}..HEAD" -- docs/ | grep -q .; then
             echo "[docs] No changes under docs/ - skipping (success)."
             exit 0
           fi
