--- a/hafnium-lts2.14-commitlint.yaml
+++ b/hafnium-lts2.14-commitlint.yaml
@@ -33,11 +33,11 @@
 
     scm:
         - git:
-            url: ${URL}
-            refspec: ${REFSPEC}
+            url: ${{URL}}
+            refspec: ${{REFSPEC}}
             name: origin
             branches:
-                - ${REFNAME}
+                - ${{REFNAME}}
             skip-tag: true
             depth: 100
             shallow-clone: false
@@ -70,7 +70,7 @@
             timeout: 30
             fail: true
         - build-name:
-            name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
+            name: '#${{BUILD_NUMBER}}-${{GIT_REVISION,length=8}}'
 
     builders:
       - shell: |
@@ -79,36 +79,36 @@
           set -x
 
           # Ensure all heads (incl. REFNAME_BASE) exist locally.
-          git fetch --no-tags "${URL}" '+refs/heads/*:refs/remotes/origin/*'
+          git fetch --no-tags "${{URL}}" '+refs/heads/*:refs/remotes/origin/*'
 
           # Prefer Gerrit-provided refspec on CI; otherwise use the manual REFSPEC.
-          FETCH_SPEC="${REFSPEC}"
-          if [[ -n "${GERRIT_REFSPEC:-}" ]]; then
-            FETCH_SPEC="${GERRIT_REFSPEC}"
+          FETCH_SPEC="${{REFSPEC}}"
+          if [[ -n "${{GERRIT_REFSPEC:-}}" ]]; then
+            FETCH_SPEC="${{GERRIT_REFSPEC}}"
           fi
 
           # Fetch the exact ref to lint (Gerrit patchset on CI or REFSPEC from
           # manual run) into FETCH_HEAD, then check out FETCH_HEAD so HEAD points
           # at the patch tip.
-          git fetch --no-tags "${URL}" "${FETCH_SPEC}"
+          git fetch --no-tags "${{URL}}" "${{FETCH_SPEC}}"
           git checkout -qf FETCH_HEAD
 
           # Range: FROM = merge-base(base, HEAD), TO = HEAD (patch tip)
-          merge_base="$(git merge-base "${REFNAME_BASE}" HEAD)"
-          echo "Computed merge-base: ${merge_base}"
-          echo "Linting commits: ${merge_base}..HEAD"
-          git log --oneline "${merge_base}..HEAD" || true
+          merge_base="$(git merge-base "${{REFNAME_BASE}}" HEAD)"
+          echo "Computed merge-base: ${{merge_base}}"
+          echo "Linting commits: ${{merge_base}}..HEAD"
+          git log --oneline "${{merge_base}}..HEAD" || true
 
           # Nothing ahead of base, so exit successfully (no commits to lint)
-          if [[ "$(git rev-list --count "${merge_base}..HEAD")" -eq 0 ]]; then
+          if [[ "$(git rev-list --count "${{merge_base}}..HEAD")" -eq 0 ]]; then
             echo "No new commits to lint (range is empty)."
             exit 0
           fi
 
           # Lint the computed range (merge_base..HEAD) using Hafnium's make target.
           # For readability, insert a blank line after each commit's result line.
-          make commitlint COMMITLINT_FROM="${merge_base}" COMMITLINT_TO="HEAD" \
-            | awk '{
+          make commitlint COMMITLINT_FROM="${{merge_base}}" COMMITLINT_TO="HEAD" \
+            | awk '{{
                 print;
                 if ($0 ~ /found[[:space:]]+[0-9]+[[:space:]]+problems?/) print "";
-              }'
+              }}'
