--- a/hafnium-lts2.14-hypervisor-el3-spmc-test-fvp.yaml
+++ b/hafnium-lts2.14-hypervisor-el3-spmc-test-fvp.yaml
@@ -20,11 +20,11 @@
     display-name: 'Hafnium-Hypervisor-EL3-SPMC for LTS v2.14 builder (FVP)'
     scm:
         - git:
-            url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
-            refspec: ${GERRIT_REFSPEC}
+            url: https://review.trustedfirmware.org/${{GERRIT_PROJECT}}
+            refspec: ${{GERRIT_REFSPEC}}
             name: origin
             branches:
-                - ${GERRIT_BRANCH}
+                - ${{GERRIT_BRANCH}}
             choosing-strategy: gerrit
             skip-tag: true
             shallow-clone: true
@@ -55,19 +55,19 @@
             timeout: 60
             fail: true
         - build-name:
-            name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
+            name: '#${{BUILD_NUMBER}}-${{GIT_REVISION,length=8}}'
     builders:
         - shell: |
             #!/bin/bash
 
             set -ex
 
-            mkdir ${WORKSPACE}/../fvp
-            pushd ${WORKSPACE}/../fvp
-            wget ${FVP_MODEL_URL}/${FVP_MODEL_ARCHIVE_NAME}
-            tar xvfz ${FVP_MODEL_ARCHIVE_NAME}
+            mkdir ${{WORKSPACE}}/../fvp
+            pushd ${{WORKSPACE}}/../fvp
+            wget ${{FVP_MODEL_URL}}/${{FVP_MODEL_ARCHIVE_NAME}}
+            tar xvfz ${{FVP_MODEL_ARCHIVE_NAME}}
             popd
-            PATH=${WORKSPACE}/prebuilts/linux-x64/dtc:$PATH
+            PATH=${{WORKSPACE}}/prebuilts/linux-x64/dtc:$PATH
             export RUN_EL3_SPMC_ONLY=true
             kokoro/build.sh
     publishers:
