--- a/hafnium-lts2.14-static-checks.yaml
+++ b/hafnium-lts2.14-static-checks.yaml
@@ -11,11 +11,11 @@
     concurrent: true
     scm:
         - git:
-            url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
-            refspec: ${GERRIT_REFSPEC}
+            url: https://review.trustedfirmware.org/${{GERRIT_PROJECT}}
+            refspec: ${{GERRIT_REFSPEC}}
             name: origin
             branches:
-                - ${GERRIT_BRANCH}
+                - ${{GERRIT_BRANCH}}
             choosing-strategy: gerrit
             skip-tag: true
             shallow-clone: true
@@ -47,7 +47,7 @@
             timeout: 60
             fail: true
         - build-name:
-            name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
+            name: '#${{BUILD_NUMBER}}-${{GIT_REVISION,length=8}}'
     builders:
         - shell: |
             #!/bin/bash
