refactor: prefix projects with Gerrit namespace for staging
* When running against the staging environment, jobs must reference
  Gerrit projects under the next namespace.
  This prevents staging jobs from interacting with production
  repositories, avoiding unintended triggers or writes.

* This change updates project definitions to apply the appropriate
  Gerrit namespace when targeting staging.

Change-Id: I6693ab187c338c56a46e7fe4b01221d30b7f32e7
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-hypervisor-el3-spmc-test-fvp.yaml
+++ b/hafnium-hypervisor-el3-spmc-test-fvp.yaml
@@ -60,7 +60,7 @@
                 approval-value: '1'
           projects:
             - project-compare-type: 'PLAIN'
-              project-pattern: 'hafnium/hafnium'
+              project-pattern: "{gerrit_project_prefix}hafnium/hafnium"
               branches:
                 - branch-pattern: 'master'
     wrappers:
