--- a/hafnium-lts2.14-unit-test.yaml
+++ b/hafnium-lts2.14-unit-test.yaml
@@ -37,7 +37,7 @@
                 approval-value: '1'
           projects:
             - project-compare-type: 'PLAIN'
-              project-pattern: 'hafnium/hafnium'
+              project-pattern: "{gerrit_project_prefix}hafnium/hafnium"
               branches:
                 - branch-pattern: 'lts-v2.14'
     wrappers:
