--- a/hafnium-commitlint.yaml
+++ b/hafnium-commitlint.yaml
@@ -68,7 +68,7 @@
                 approval-value: '1'
           projects:
             - project-compare-type: 'PLAIN'
-              project-pattern: 'hafnium/hafnium'
+              project-pattern: "{gerrit_project_prefix}hafnium/hafnium"
               branches:
                 - branch-compare-type: PLAIN
                   branch-pattern: 'master'
