--- a/hafnium-lts2.14-build-test-qemu.yaml
+++ b/hafnium-lts2.14-build-test-qemu.yaml
@@ -47,7 +47,7 @@
                 approval-value: '1'
           projects:
             - project-compare-type: 'PLAIN'
-              project-pattern: 'hafnium/hafnium'
+              project-pattern: "{gerrit_project_prefix}hafnium/hafnium"
               branches:
                 - branch-pattern: 'lts-v2.14'
 #            silent: false
