--- a/hafnium-lts2.14-check-docs.yaml
+++ b/hafnium-lts2.14-check-docs.yaml
@@ -58,7 +58,7 @@
                 approval-value: 1
           projects:
             - project-compare-type: PLAIN
-              project-pattern: hafnium/hafnium
+              project-pattern: "{gerrit_project_prefix}hafnium/hafnium"
               branches:
                 - branch-compare-type: PLAIN
                   branch-pattern: lts-v2.14
