--- a/hafnium-lts2.14-hypervisor-el3-spmc-test-fvp.yaml
+++ b/hafnium-lts2.14-hypervisor-el3-spmc-test-fvp.yaml
@@ -46,7 +46,7 @@
                 approval-value: '1'
           projects:
             - project-compare-type: 'PLAIN'
-              project-pattern: 'hafnium/hafnium'
+              project-pattern: "{gerrit_project_prefix}hafnium/hafnium"
               branches:
                 - branch-pattern: 'lts-v2.14'
     wrappers:
