--- a/hafnium-static-checks.yaml
+++ b/hafnium-static-checks.yaml
@@ -48,7 +48,7 @@
                 approval-value: '1'
           projects:
             - project-compare-type: 'PLAIN'
-              project-pattern: 'hafnium/hafnium'
+              project-pattern: "{gerrit_project_prefix}hafnium/hafnium"
               branches:
                 - branch-pattern: 'master'
 #            silent: false
